--- a/features/container-scroll-state-queries.yml.dist
+++ b/features/container-scroll-state-queries.yml.dist
@@ -8,4 +8,8 @@ status:
     chrome_android: "133"
     edge: "133"
 compat_features:
+  - css.at-rules.container.scroll-state_queries
+  - css.at-rules.container.scroll-state_queries.scrollable
+  - css.at-rules.container.scroll-state_queries.snapped
+  - css.at-rules.container.scroll-state_queries.stuck
   - css.properties.container-type.scroll-state
