--- a/features/anchor-positioning.yml
+++ b/features/anchor-positioning.yml
@@ -80,6 +80,10 @@ compat_features:
   - api.CSSPositionTryRule
   - api.CSSPositionTryRule.name
   - api.CSSPositionTryRule.style
+  - api.HTMLButtonElement.popoverTargetElement.implicit_anchor_reference
+  - api.HTMLElement.showPopover.source.implicit_anchor_reference
+  - api.HTMLElement.togglePopover.source.implicit_anchor_reference
+  - api.HTMLInputElement.popoverTargetElement.implicit_anchor_reference
   - css.at-rules.position-try
   - css.properties.align-items.anchor-center
   - css.properties.align-self.anchor-center
@@ -197,3 +201,5 @@ compat_features:
   - css.properties.right.anchor-size
   - css.properties.top.anchor-size
   - css.types.anchor-size.inset_margin
+  - html.elements.button.popovertarget.implicit_anchor_reference
+  - html.elements.input.popovertarget.implicit_anchor_reference
