`ua-client-hints`: add new keys

--- a/features/ua-client-hints.yml
+++ b/features/ua-client-hints.yml
@@ -21,8 +21,10 @@ compat_features:
   - http.headers.Sec-CH-UA
   - http.headers.Sec-CH-UA-Arch
   - http.headers.Sec-CH-UA-Bitness
+  - http.headers.Sec-CH-UA-Form-Factors
   - http.headers.Sec-CH-UA-Full-Version-List
   - http.headers.Sec-CH-UA-Mobile
   - http.headers.Sec-CH-UA-Model
   - http.headers.Sec-CH-UA-Platform
   - http.headers.Sec-CH-UA-Platform-Version
+  - http.headers.Sec-CH-UA-WoW64
