--- a/features/document-write.yml.dist
+++ b/features/document-write.yml.dist
@@ -4,13 +4,9 @@
 status:
   baseline: false
   support:
-    chrome: "45"
-    chrome_android: "45"
-    edge: "12"
-    firefox: "69"
-    firefox_android: "79"
-    safari: "11"
-    safari_ios: "11"
+    chrome: "86"
+    chrome_android: "86"
+    edge: "86"
 compat_features:
   # baseline: high
   # baseline_low_date: 2020-07-28
@@ -27,7 +23,6 @@ compat_features:
   - api.Document.open
   - api.Document.writeln
 
-  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome: "45"
@@ -38,3 +33,12 @@ compat_features:
   #   safari: "11"
   #   safari_ios: "11"
   - api.Document.write
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support:
+  #   chrome: "86"
+  #   chrome_android: "86"
+  #   edge: "86"
+  - api.Document.write.accepts_TrustedHTML
+  - api.Document.writeln.accepts_TrustedHTML
