--- a/features/text-underline-position.yml
+++ b/features/text-underline-position.yml
@@ -1,5 +1,5 @@
 name: text-underline-position
-description: "The `text-underline-position` CSS property set the position of underlines text. For example, `text-underline-position: under` places the underline below the text, avoiding crossing descenders. The underline may be further adjusted by the `text-underline-offset` property."
+description: "The `text-underline-position` CSS property sets the position of underlines on text. For example, `text-underline-position: under` places the underline below the text, avoiding crossing descenders. The underline may be further adjusted by the `text-underline-offset` property."
 spec: https://drafts.csswg.org/css-text-decor-4/#text-underline-position-property
 group: text
 status:
