Apply suggested description (lightly modified)

--- a/features/regexp-static-properties.yml
+++ b/features/regexp-static-properties.yml
@@ -1,5 +1,5 @@
 name: RegExp static properties
-description: The `RegExp` object has several static properties that are the input and results of the most-recent regular expression match.
+description: The `RegExp` object has several static properties to access the input and results of the most-recent regular expression match.
 spec: https://github.com/tc39/proposal-regexp-legacy-features
 discouraged:
   according_to:
