--- a/features/document-write.yml.dist
+++ b/features/document-write.yml.dist
@@ -4,9 +4,13 @@
 status:
   baseline: false
   support:
-    chrome: "86"
-    chrome_android: "86"
-    edge: "86"
+    chrome: "45"
+    chrome_android: "45"
+    edge: "12"
+    firefox: "69"
+    firefox_android: "79"
+    safari: "11"
+    safari_ios: "11"
 compat_features:
   # baseline: high
   # baseline_low_date: 2020-07-28
@@ -23,6 +27,7 @@ compat_features:
   - api.Document.open
   - api.Document.writeln
 
+  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome: "45"
@@ -34,7 +39,6 @@ compat_features:
   #   safari_ios: "11"
   - api.Document.write
 
-  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome: "86"
