--- a/features/interactivity.yml
+++ b/features/interactivity.yml
@@ -1,3 +1,3 @@
 name: interactivity
-description: The `interactivity: inert` CSS declaration makes an element and its descendants inert, like when using the `inert` HTML attribute. Inert elements can't be focused or clicked, their text can't be selected or found using the browser's find-in-page feature.
+description: "The `interactivity: inert` CSS declaration makes an element and its descendants inert, like when using the `inert` HTML attribute. Inert elements can't be focused or clicked, their text can't be selected or found using the browser's find-in-page feature."
 spec: https://drafts.csswg.org/css-ui-4/#inertness
