--- a/packages/baseline-browser-mapping/package.json
+++ b/packages/baseline-browser-mapping/package.json
@@ -19,5 +19,9 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@mdn/browser-compat-data": "latest"
+  },
+  "devDependencies": {
+    "@types/node": "^22.13.5",
+    "typescript": "^5.7.2"
   }
 }
