--- a/features/min-max-width-height.yml.dist
+++ b/features/min-max-width-height.yml.dist
@@ -36,6 +36,19 @@ compat_features:
   #   chrome: "1"
   #   chrome_android: "18"
   #   edge: "12"
+  #   firefox: "1"
+  #   firefox_android: "4"
+  #   safari: "1.3"
+  #   safari_ios: "1"
+  - css.properties.max-height
+
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "1"
+  #   chrome_android: "18"
+  #   edge: "12"
   #   firefox: "3"
   #   firefox_android: "4"
   #   safari: "1.3"
@@ -54,7 +67,6 @@ compat_features:
   #   firefox_android: "4"
   #   safari: "1.3"
   #   safari_ios: "1"
-  - css.properties.max-height
   - css.properties.max-height.none
 
   # baseline: high
