--- a/features/webrtc-stats.yml.dist
+++ b/features/webrtc-stats.yml.dist
@@ -462,8 +462,9 @@ compat_features:
   - api.RTCStatsReport.type_outbound-rtp.retransmittedBytesSent
   - api.RTCStatsReport.type_outbound-rtp.retransmittedPacketsSent
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-08-23
+  # baseline_high_date: 2025-02-23
   # support:
   #   chrome: "86"
   #   chrome_android: "86"
