--- a/features/mask-border.yml.dist
+++ b/features/mask-border.yml.dist
@@ -5,6 +5,7 @@ status:
   baseline: false
   support:
     safari: "17.2"
+    safari_ios: "17.2"
 compat_features:
   - css.properties.mask-border
   - css.properties.mask-border-outset
