--- a/features/svg.yml.dist
+++ b/features/svg.yml.dist
@@ -1589,8 +1589,9 @@ compat_features:
   #   safari_ios: "15.5"
   - api.SVGElement.focus.options_preventScroll_parameter
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-08-23
+  # baseline_high_date: 2025-02-23
   # support:
   #   chrome: "45"
   #   chrome_android: "45"
