--- a/features/json-modules.yml
+++ b/features/json-modules.yml
@@ -2,4 +2,7 @@ name: JSON import attributes
 description: 'Module `import … with { type: "json" }` statements load JSON data. Also known as JSON module scripts.'
 spec: https://html.spec.whatwg.org/multipage/webappapis.html#json-module-script
 group: json
+compat_features:
+  - javascript.statements.import.import_attributes.type_json
+  - javascript.grammar.trailing_commas.trailing_commas_in_dynamic_import
 # TODO: Tag javascript.statements.import when https://github.com/web-platform-dx/web-features/issues/1173 is resolved.
