--- a/features/json-modules.yml.dist
+++ b/features/json-modules.yml.dist
@@ -10,4 +10,21 @@ status:
     safari: "17.2"
     safari_ios: "17.2"
 compat_features:
+  # baseline: false
+  # support:
+  #   chrome: "91"
+  #   chrome_android: "91"
+  #   edge: "91"
+  #   safari: "15"
+  #   safari_ios: "15"
+  - javascript.grammar.trailing_commas.trailing_commas_in_dynamic_import
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support:
+  #   chrome: "123"
+  #   chrome_android: "123"
+  #   edge: "123"
+  #   safari: "17.2"
+  #   safari_ios: "17.2"
   - javascript.statements.import.import_attributes.type_json
