Add new `setScreenshareActive` key to `media-session`

--- a/features/media-session.yml
+++ b/features/media-session.yml
@@ -35,5 +35,6 @@ compat_features:
   - api.MediaSession.setActionHandler.togglemicrophone_type
   - api.MediaSession.setCameraActive
   - api.MediaSession.setMicrophoneActive
+  - api.MediaSession.setScreenshareActive
   - api.MediaSession.setPositionState
   - api.Navigator.mediaSession
