--- a/features/media-session.yml.dist
+++ b/features/media-session.yml.dist
@@ -128,3 +128,7 @@ compat_features:
   - api.ChapterInformation.startTime
   - api.ChapterInformation.title
   - api.MediaMetadata.chapterInfo
+
+  # baseline: false
+  # support: {}
+  - api.MediaSession.setScreenshareActive
