--- a/features/overflow-overlay.yml
+++ b/features/overflow-overlay.yml
@@ -1,4 +1,4 @@
-name: "`overflow: overlay`"
+name: "overflow: overlay"
 description: "The `overflow: overlay` CSS declaration is an alias to `overflow: auto`. Historically, it caused non-standard behavior, allowing scrollbars to overlay content without taking up layout space."
 spec: https://drafts.csswg.org/css-overflow-3/#propdef-overflow
 group: css
