--- a/features/text-decoration-line-blink.yml
+++ b/features/text-decoration-line-blink.yml
@@ -1,4 +1,4 @@
-name: "`text-decoration-line: blink`"
+name: "text-decoration-line: blink"
 description: "The `text-decoration: blink` CSS declaration flashes text between visible and invisible."
 spec: https://drafts.csswg.org/css-text-decor-3/#valdef-text-decoration-line-blink
 group:
