Assign worklet keys

--- a/features/audio-worklet.yml
+++ b/features/audio-worklet.yml
@@ -20,3 +20,6 @@ compat_features:
   - api.AudioWorkletProcessor.AudioWorkletProcessor
   - api.AudioWorkletProcessor.port
   - api.BaseAudioContext.audioWorklet
+  - api.Worklet
+  - api.Worklet.addModule
+  - api.WorkletGlobalScope
