--- a/features/js-modules.yml
+++ b/features/js-modules.yml
@@ -13,6 +13,7 @@ status:
     - javascript.statements.export
     - javascript.statements.import
 compat_features:
+  - api.Worklet.ecmascript_modules
   - html.elements.script.nomodule
   - html.elements.script.type.module
   - javascript.statements.export
