--- a/features/audio-worklet.yml.dist
+++ b/features/audio-worklet.yml.dist
@@ -29,6 +29,21 @@ compat_features:
   - api.AudioWorkletProcessor.AudioWorkletProcessor
   - api.AudioWorkletProcessor.port
 
+  # baseline: high
+  # baseline_low_date: 2021-04-26
+  # baseline_high_date: 2023-10-26
+  # support:
+  #   chrome: "65"
+  #   chrome_android: "65"
+  #   edge: "79"
+  #   firefox: "76"
+  #   firefox_android: "79"
+  #   safari: "14.1"
+  #   safari_ios: "14.5"
+  - api.Worklet
+  - api.Worklet.addModule
+  - api.WorkletGlobalScope
+
   # ⬇️ Same status as overall feature ⬇️
   # baseline: high
   # baseline_low_date: 2021-04-26
