Add `worker_support` keys that don't move Baseline dates

--- a/features/canvas-2d.yml
+++ b/features/canvas-2d.yml
@@ -88,6 +88,7 @@ compat_features:
   - api.CanvasRenderingContext2D.translate
   - api.CanvasRenderingContext2D.wordSpacing
   - api.ImageData
+  - api.ImageData.worker_support
   - api.ImageData.ImageData
   - api.ImageData.colorSpace
   - api.ImageData.data
