--- a/features/canvas-2d.yml.dist
+++ b/features/canvas-2d.yml.dist
@@ -217,6 +217,19 @@ compat_features:
   #   chrome: "36"
   #   chrome_android: "36"
   #   edge: "14"
+  #   firefox: "25"
+  #   firefox_android: "25"
+  #   safari: "7"
+  #   safari_ios: "7"
+  - api.ImageData.worker_support
+
+  # baseline: high
+  # baseline_low_date: 2016-08-02
+  # baseline_high_date: 2019-02-02
+  # support:
+  #   chrome: "36"
+  #   chrome_android: "36"
+  #   edge: "14"
   #   firefox: "29"
   #   firefox_android: "29"
   #   safari: "8"
