--- a/features/setinterval.yml
+++ b/features/setinterval.yml
@@ -3,4 +3,6 @@ description: "The `setInterval()` global function repeatedly executes provided c
 spec: https://html.spec.whatwg.org/multipage/timers-and-user-prompts.html#timers
 compat_features:
   - api.setInterval
+  - api.setInterval.worker_support
   - api.clearInterval
+  - api.clearInterval.worker_support
