--- a/features/settimeout.yml
+++ b/features/settimeout.yml
@@ -3,4 +3,6 @@ description: "The `setTimeout()` global function executes provided code after a 
 spec: https://html.spec.whatwg.org/multipage/timers-and-user-prompts.html#timers
 compat_features:
   - api.setTimeout
+  - api.setTimeout.worker_support
   - api.clearTimeout
+  - api.clearTimeout.worker_support
