--- a/features/base64encodedecode.yml.dist
+++ b/features/base64encodedecode.yml.dist
@@ -3,16 +3,42 @@
 
 status:
   baseline: high
-  baseline_low_date: 2015-07-29
-  baseline_high_date: 2018-01-29
+  baseline_low_date: 2016-09-20
+  baseline_high_date: 2019-03-20
   support:
-    chrome: "4"
-    chrome_android: "18"
+    chrome: "30"
+    chrome_android: "30"
     edge: "12"
-    firefox: "1"
+    firefox: "4"
     firefox_android: "4"
-    safari: "3"
-    safari_ios: "1"
+    safari: "10"
+    safari_ios: "10"
 compat_features:
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "4"
+  #   chrome_android: "18"
+  #   edge: "12"
+  #   firefox: "1"
+  #   firefox_android: "4"
+  #   safari: "3"
+  #   safari_ios: "1"
   - api.atob
   - api.btoa
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: high
+  # baseline_low_date: 2016-09-20
+  # baseline_high_date: 2019-03-20
+  # support:
+  #   chrome: "30"
+  #   chrome_android: "30"
+  #   edge: "12"
+  #   firefox: "4"
+  #   firefox_android: "4"
+  #   safari: "10"
+  #   safari_ios: "10"
+  - api.atob.worker_support
+  - api.btoa.worker_support
