--- a/features/external.yml
+++ b/features/external.yml
@@ -1,5 +1,5 @@
 name: window.external
-description: The `window.external.AddSearchProvider()` and `window.external.IsSearchProviderInstalled()` methods use to add external search providers to the browser but now do nothing, per specification.
+description: The `window.external.AddSearchProvider()` and `window.external.IsSearchProviderInstalled()` do nothing. Historically, they added external search providers to the browser.
 spec: https://html.spec.whatwg.org/multipage/obsolete.html#external
 discouraged:
   according_to:
