--- a/features/font-width.yml
+++ b/features/font-width.yml
@@ -1,6 +1,6 @@
 name: font-width
 description: The `font-width` CSS property selects a font face from a font family based on width, either by a keyword such as `condensed` or a percentage.
-spec: https://drafts.csswg.org/css-fonts-4/#font-stretch-prop
+spec: https://drafts.csswg.org/css-fonts-4/#font-width-prop
 group: fonts
 compat_features:
   - css.properties.font-width
