--- a/features/getboxquads.yml
+++ b/features/getboxquads.yml
@@ -1,5 +1,5 @@
 name: getBoxQuads()
-description: The `getBoxQuads()` method, when called on a document, element, pseudo-element, or text node returns the list of `DOMQuad` objects that represent the CSS boxes used to render the node.
+description: The `getBoxQuads()` method, when called on a document, element, pseudo-element, or text node, returns the list of `DOMQuad` objects that represent the CSS boxes used to render the node.
 spec: https://drafts.csswg.org/cssom-view-1/
 compat_features:
   - api.Document.getBoxQuads
