--- a/features/meta-application-title.yml
+++ b/features/meta-application-title.yml
@@ -1,5 +1,5 @@
-name: application-title
-description: The `application-title` metadata name, used as `<meta name="application-title" content="">`, sets the text content that appears in the title bar of an installed web application.
+name: '<meta name="application-title">'
+description: The `name="application-title"` attribute for the `<meta>` HTML element sets an installed web application's title bar text.
 # No spec yet. Inclusion in the HTML spec depends on multi-vendor implementation.
 # See https://github.com/whatwg/html/issues/8909
 # So, for now, the Edge explainer is the closest thing to a spec.
