--- a/.typos.toml
+++ b/.typos.toml
@@ -14,6 +14,8 @@ extend-ignore-re = [
 [default.extend-words]
 "clonable" = "clonable"
 "seeked" = "seeked"
+# https://github.com/web-platform-dx/web-features/pull/2484
+"seperators" = "seperators"
 
 [default.extend-identifiers]
 "EXT_shader_texture_lod" = "EXT_shader_texture_lod"
