--- a/features/scroll-initial-target.yml.dist
+++ b/features/scroll-initial-target.yml.dist
@@ -3,7 +3,10 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "133"
+    chrome_android: "133"
+    edge: "133"
 compat_features:
   - css.properties.scroll-initial-target
   - css.properties.scroll-initial-target.nearest
