--- a/features/scroll-initial-target.yml
+++ b/features/scroll-initial-target.yml
@@ -1,5 +1,5 @@
 name: scroll-initial-target
-description: "The `scroll-initial-target: nearest` CSS declaration scrolls to the selected element when it first appears, much like scrolling to a URL fragment."
+description: "The `scroll-initial-target: nearest` CSS declaration sets the initial scroll position of its scroll container to the top of the element, much like scrolling to a URL fragment."
 spec: https://drafts.csswg.org/css-scroll-snap-2/#properties-on-the-scroll-container
 compat_features:
   - css.properties.scroll-initial-target
