--- a/features/date-get-year-set-year.yml
+++ b/features/date-get-year-set-year.yml
@@ -1,5 +1,5 @@
 name: getYear() and setYear()
-description: The `getYear()` and `setYear()` methods of `Date` objects get and set the year offset to 1900, changing a date's year in way that is subject to the year 2000 problem.
+description: The `getYear()` and `setYear()` methods of `Date` objects get and set the year as an offset to 1900.
 spec: https://tc39.es/ecma262/multipage/additional-ecmascript-features-for-web-browsers.html#sec-date.prototype.getyear
 group: javascript
 discouraged:
