--- a/features/escape-unescape.yml
+++ b/features/escape-unescape.yml
@@ -1,5 +1,5 @@
 name: escape() and unescape()
-description: The `escape()` and `unescape()` built-in Javascript methods encode and unencode strings using percent encoding, where certain characters are replaced by hexidecimal escape sequences.
+description: The `escape()` and `unescape()` built-in Javascript methods encode and unencode strings using percent encoding, where certain characters are replaced by hexadecimal escape sequences.
 spec: https://tc39.es/ecma262/multipage/additional-ecmascript-features-for-web-browsers.html#sec-escape-string
 group: javascript
 discouraged:
