--- a/features/date-to-gmt-string.yml
+++ b/features/date-to-gmt-string.yml
@@ -1,5 +1,5 @@
 name: toGMTString()
-description: The `toGMTSTring()` method of `Date` objects is an alias to the `toUTCString()` method.
+description: The `toGMTString()` method of `Date` objects is an alias to the `toUTCString()` method.
 spec: https://tc39.es/ecma262/multipage/additional-ecmascript-features-for-web-browsers.html#sec-date.prototype.togmtstring
 discouraged:
   according_to:
