Apply suggestions from code review
Co-authored-by: Daniel D. Beck <daniel@ddbeck.com>

--- a/features/transferable-streams.yml
+++ b/features/transferable-streams.yml
@@ -1,5 +1,5 @@
 name: Transferable streams
-description: Streams are transferable objects, which can be moved between contexts such as workers.
+description: Streams are transferable objects, which can be moved between contexts such as windows and workers.
 spec: https://streams.spec.whatwg.org/#rs-transfer
 group: streams
 compat_features:
