--- a/features/readable-byte-streams.yml
+++ b/features/readable-byte-streams.yml
@@ -1,5 +1,5 @@
 name: Readable byte streams
-description: Readable byte streams allow you to efficiently read bytes from a stream into a buffer without incurring extra copies.
+description: A `ReadableStream` constructed with `{ type: "bytes" }` reads bytes from a stream without making extra copies, improving efficiency for streams of large chunks. Also known as BYOB or bring your own buffer.
 spec: https://streams.spec.whatwg.org/
 caniuse: streams
 group: streams
