Use web-features for version selection This change replaces the previous simple date-based logic for selecting feature set-compatible versions to a more sophisticated feature based selection logic using web-features.  This ensures that older browser versions will be included if they fully support the targeted feature set. Also fixes a bug in the version comparison function.

--- a/packages/baseline-browser-mapping/package.json
+++ b/packages/baseline-browser-mapping/package.json
@@ -18,7 +18,8 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@mdn/browser-compat-data": "latest"
+    "@mdn/browser-compat-data": "latest",
+    "web-features": "latest"
   },
   "devDependencies": {
     "@types/node": "^22.13.5",
