Follow BCD's rename of the env keys

--- a/features/safe-area-inset.yml
+++ b/features/safe-area-inset.yml
@@ -3,8 +3,8 @@ description: The `safe-area-inset-` CSS environment variables represent a rectan
 spec: https://drafts.csswg.org/css-env-1/#safe-area-insets
 group: environment-variables
 compat_features:
-  - css.properties.custom-property.env.safe-area-inset-bottom
-  - css.properties.custom-property.env.safe-area-inset-left
-  - css.properties.custom-property.env.safe-area-inset-right
-  - css.properties.custom-property.env.safe-area-inset-top
-  - css.properties.custom-property.env
+  - css.types.env.safe-area-inset-bottom
+  - css.types.env.safe-area-inset-left
+  - css.types.env.safe-area-inset-right
+  - css.types.env.safe-area-inset-top
+  - css.types.env
