--- a/features/window-controls-overlay.yml
+++ b/features/window-controls-overlay.yml
@@ -12,8 +12,8 @@ compat_features:
   - api.WindowControlsOverlayGeometryChangeEvent.WindowControlsOverlayGeometryChangeEvent
   - api.WindowControlsOverlayGeometryChangeEvent.titlebarAreaRect
   - api.WindowControlsOverlayGeometryChangeEvent.visible
-  - css.properties.custom-property.env.titlebar-area-height
-  - css.properties.custom-property.env.titlebar-area-width
-  - css.properties.custom-property.env.titlebar-area-x
-  - css.properties.custom-property.env.titlebar-area-y
+  - css.types.env.titlebar-area-height
+  - css.types.env.titlebar-area-width
+  - css.types.env.titlebar-area-x
+  - css.types.env.titlebar-area-y
   - html.manifest.display_override.window-controls-overlay
