Adapt to BCD's webdriver key path move

--- a/features/virtual-pressure-sources.yml
+++ b/features/virtual-pressure-sources.yml
@@ -5,6 +5,6 @@ group:
   - compute-pressure
   - webdriver
 compat_features:
-  - webdriver.commands.CreateVirtualPressureSource
-  - webdriver.commands.DeleteVirtualPressureSource
-  - webdriver.commands.UpdateVirtualPressureSource
+  - webdriver.classic.CreateVirtualPressureSource
+  - webdriver.classic.DeleteVirtualPressureSource
+  - webdriver.classic.UpdateVirtualPressureSource
