--- a/features/virtual-sensors.yml.dist
+++ b/features/virtual-sensors.yml.dist
@@ -8,7 +8,7 @@ status:
     chrome_android: "120"
     edge: "120"
 compat_features:
-  - webdriver.commands.CreateVirtualSensor
-  - webdriver.commands.DeleteVirtualSensor
-  - webdriver.commands.GetVirtualSensorInformation
-  - webdriver.commands.UpdateVirtualSensorReading
+  - webdriver.classic.CreateVirtualSensor
+  - webdriver.classic.DeleteVirtualSensor
+  - webdriver.classic.GetVirtualSensorInformation
+  - webdriver.classic.UpdateVirtualSensorReading
