--- a/features/virtual-pressure-sources.yml.dist
+++ b/features/virtual-pressure-sources.yml.dist
@@ -8,6 +8,6 @@ status:
     chrome_android: "129"
     edge: "129"
 compat_features:
-  - webdriver.commands.CreateVirtualPressureSource
-  - webdriver.commands.DeleteVirtualPressureSource
-  - webdriver.commands.UpdateVirtualPressureSource
+  - webdriver.classic.CreateVirtualPressureSource
+  - webdriver.classic.DeleteVirtualPressureSource
+  - webdriver.classic.UpdateVirtualPressureSource
