--- a/features/webdriver.yml.dist
+++ b/features/webdriver.yml.dist
@@ -24,67 +24,67 @@ compat_features:
   #   chrome: "65"
   #   edge: "79"
   #   firefox: "55"
-  - webdriver.commands.AcceptAlert
-  - webdriver.commands.AddCookie
-  - webdriver.commands.Back
-  - webdriver.commands.CloseWindow
-  - webdriver.commands.DeleteAllCookies
-  - webdriver.commands.DeleteCookie
-  - webdriver.commands.DeleteSession
-  - webdriver.commands.DismissAlert
-  - webdriver.commands.ElementClear
-  - webdriver.commands.ElementClick
-  - webdriver.commands.ElementSendKeys
-  - webdriver.commands.ExecuteAsyncScript
-  - webdriver.commands.ExecuteScript
-  - webdriver.commands.FindElement
-  - webdriver.commands.FindElementFromElement
-  - webdriver.commands.FindElements
-  - webdriver.commands.FindElementsFromElement
-  - webdriver.commands.Forward
-  - webdriver.commands.FullscreenWindow
-  - webdriver.commands.GetActiveElement
-  - webdriver.commands.GetAlertText
-  - webdriver.commands.GetAllCookies
-  - webdriver.commands.GetCurrentURL
-  - webdriver.commands.GetElementAttribute
-  - webdriver.commands.GetElementCSSValue
-  - webdriver.commands.GetElementProperty
-  - webdriver.commands.GetElementRect
-  - webdriver.commands.GetElementTagName
-  - webdriver.commands.GetElementText
-  - webdriver.commands.GetNamedCookie
-  - webdriver.commands.GetPageSource
-  - webdriver.commands.GetTimeouts
-  - webdriver.commands.GetTitle
-  - webdriver.commands.GetWindowHandle
-  - webdriver.commands.GetWindowHandles
-  - webdriver.commands.GetWindowRect
-  - webdriver.commands.IsElementEnabled
-  - webdriver.commands.IsElementSelected
-  - webdriver.commands.MaximizeWindow
-  - webdriver.commands.MinimizeWindow
-  - webdriver.commands.NavigateTo
-  - webdriver.commands.NewSession
-  - webdriver.commands.Refresh
-  - webdriver.commands.SendAlertText
-  - webdriver.commands.SetTimeouts
-  - webdriver.commands.SetWindowRect
-  - webdriver.commands.Status
-  - webdriver.commands.SwitchToFrame
-  - webdriver.commands.SwitchToParentFrame
-  - webdriver.commands.SwitchToWindow
-  - webdriver.commands.TakeElementScreenshot
-  - webdriver.commands.TakeScreenshot
+  - webdriver.classic.AcceptAlert
+  - webdriver.classic.AddCookie
+  - webdriver.classic.Back
+  - webdriver.classic.CloseWindow
+  - webdriver.classic.DeleteAllCookies
+  - webdriver.classic.DeleteCookie
+  - webdriver.classic.DeleteSession
+  - webdriver.classic.DismissAlert
+  - webdriver.classic.ElementClear
+  - webdriver.classic.ElementClick
+  - webdriver.classic.ElementSendKeys
+  - webdriver.classic.ExecuteAsyncScript
+  - webdriver.classic.ExecuteScript
+  - webdriver.classic.FindElement
+  - webdriver.classic.FindElementFromElement
+  - webdriver.classic.FindElements
+  - webdriver.classic.FindElementsFromElement
+  - webdriver.classic.Forward
+  - webdriver.classic.FullscreenWindow
+  - webdriver.classic.GetActiveElement
+  - webdriver.classic.GetAlertText
+  - webdriver.classic.GetAllCookies
+  - webdriver.classic.GetCurrentURL
+  - webdriver.classic.GetElementAttribute
+  - webdriver.classic.GetElementCSSValue
+  - webdriver.classic.GetElementProperty
+  - webdriver.classic.GetElementRect
+  - webdriver.classic.GetElementTagName
+  - webdriver.classic.GetElementText
+  - webdriver.classic.GetNamedCookie
+  - webdriver.classic.GetPageSource
+  - webdriver.classic.GetTimeouts
+  - webdriver.classic.GetTitle
+  - webdriver.classic.GetWindowHandle
+  - webdriver.classic.GetWindowHandles
+  - webdriver.classic.GetWindowRect
+  - webdriver.classic.IsElementEnabled
+  - webdriver.classic.IsElementSelected
+  - webdriver.classic.MaximizeWindow
+  - webdriver.classic.MinimizeWindow
+  - webdriver.classic.NavigateTo
+  - webdriver.classic.NewSession
+  - webdriver.classic.Refresh
+  - webdriver.classic.SendAlertText
+  - webdriver.classic.SetTimeouts
+  - webdriver.classic.SetWindowRect
+  - webdriver.classic.Status
+  - webdriver.classic.SwitchToFrame
+  - webdriver.classic.SwitchToParentFrame
+  - webdriver.classic.SwitchToWindow
+  - webdriver.classic.TakeElementScreenshot
+  - webdriver.classic.TakeScreenshot
 
   # baseline: false
   # support:
   #   firefox: "66"
   #   firefox_android: "66"
-  - webdriver.commands.NewWindow
+  - webdriver.classic.NewWindow
 
   # baseline: false
   # support:
   #   firefox: "55"
-  - webdriver.commands.PerformActions
-  - webdriver.commands.ReleaseActions
+  - webdriver.classic.PerformActions
+  - webdriver.classic.ReleaseActions
