--- a/features/custom-properties.yml.dist
+++ b/features/custom-properties.yml.dist
@@ -15,4 +15,4 @@ status:
     safari_ios: "9.3"
 compat_features:
   - css.properties.custom-property
-  - css.properties.custom-property.var
+  - css.types.var
