--- a/features/inert.yml.dist
+++ b/features/inert.yml.dist
@@ -32,3 +32,4 @@ compat_features:
   #   firefox: "120"
   #   firefox_android: "120"
   - api.HTMLElement.inert.ignores_find_in_page
+  - html.global_attributes.inert.ignores_find_in_page
