--- a/features/paint.yml.dist
+++ b/features/paint.yml.dist
@@ -70,6 +70,12 @@ compat_features:
   - api.PaintRenderingContext2D.setTransform
 
   # baseline: false
-  # support: {}
+  # support:
+  #   chrome: "134"
+  #   chrome_android: "134"
+  #   edge: "134"
   - api.PaintRenderingContext2D.imageSmoothingQuality
+
+  # baseline: false
+  # support: {}
   - css.types.image.paint.additional_parameters
