--- a/features/safe-area-inset.yml.dist
+++ b/features/safe-area-inset.yml.dist
@@ -14,8 +14,8 @@ status:
     safari: "11.1"
     safari_ios: "11.3"
 compat_features:
-  - css.properties.custom-property.env
-  - css.properties.custom-property.env.safe-area-inset-bottom
-  - css.properties.custom-property.env.safe-area-inset-left
-  - css.properties.custom-property.env.safe-area-inset-right
-  - css.properties.custom-property.env.safe-area-inset-top
+  - css.types.env
+  - css.types.env.safe-area-inset-bottom
+  - css.types.env.safe-area-inset-left
+  - css.types.env.safe-area-inset-right
+  - css.types.env.safe-area-inset-top
