--- a/features/autocorrect.yml.dist
+++ b/features/autocorrect.yml.dist
@@ -3,15 +3,21 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    firefox: "136"
+    firefox_android: "136"
 compat_features:
   # baseline: false
   # support:
+  #   firefox: "136"
+  #   firefox_android: "136"
   #   safari: "14.1"
   #   safari_ios: "14.5"
   - api.HTMLElement.autocorrect
 
   # ⬇️ Same status as overall feature ⬇️
   # baseline: false
-  # support: {}
+  # support:
+  #   firefox: "136"
+  #   firefox_android: "136"
   - html.global_attributes.autocorrect
