--- a/features/is-error.yml.dist
+++ b/features/is-error.yml.dist
@@ -3,6 +3,9 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "134"
+    chrome_android: "134"
+    edge: "134"
 compat_features:
   - javascript.builtins.Error.isError
