--- a/features/open-closed.yml.dist
+++ b/features/open-closed.yml.dist
@@ -10,6 +10,8 @@ compat_features:
   #   chrome: "133"
   #   chrome_android: "133"
   #   edge: "133"
+  #   firefox: "136"
+  #   firefox_android: "136"
   - css.selectors.open
 
   # ⬇️ Same status as overall feature ⬇️
