--- a/features/popover.yml.dist
+++ b/features/popover.yml.dist
@@ -81,9 +81,6 @@ compat_features:
   - api.HTMLElement.popover
 
   # baseline: false
-  # support:
-  #   chrome: "133"
-  #   chrome_android: "133"
-  #   edge: "133"
+  # support: {}
   - api.HTMLElement.showPopover.source
   - api.HTMLElement.togglePopover.source
