--- a/features/shared-storage-locks.yml.dist
+++ b/features/shared-storage-locks.yml.dist
@@ -3,7 +3,10 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "134"
+    chrome_android: "134"
+    edge: "134"
 compat_features:
   - api.SharedStorage.batchUpdate
   - api.SharedStorageAppendMethod
