Make HTML attribute names lowercase.

--- a/features/autocorrect.yml
+++ b/features/autocorrect.yml
@@ -1,4 +1,4 @@
-name: Autocorrect
+name: autocorrect
 description: The `autocorrect` global HTML attribute controls whether to automatically correct spelling or punctuation errors for user input.
 spec: https://html.spec.whatwg.org/multipage/interaction.html#autocorrection
 compat_features:
