--- a/features/autofocus.yml
+++ b/features/autofocus.yml
@@ -1,4 +1,4 @@
-name: Autofocus
+name: autofocus
 description: The `autofocus` HTML attribute gives focus to an element on page load.
 spec: https://html.spec.whatwg.org/multipage/interaction.html#the-autofocus-attribute
 caniuse: autofocus
