--- a/features/contenteditable.yml
+++ b/features/contenteditable.yml
@@ -1,4 +1,4 @@
-name: Contenteditable
+name: contenteditable
 description: The `contenteditable` global HTML attribute allows the user to edit the content of an element, such as inserting or deleting text.
 spec: https://html.spec.whatwg.org/multipage/interaction.html#contenteditable
 caniuse: contenteditable
