--- a/features/enterkeyhint.yml
+++ b/features/enterkeyhint.yml
@@ -1,4 +1,4 @@
-name: Enterkeyhint
+name: enterkeyhint
 description: The `enterkeyhint` global HTML attribute sets the label for a virtual keyboard's <kbd>Enter</kbd> key. For example, `enterkeyhint="search"` may label the key with a magnifying glass icon.
 spec: https://html.spec.whatwg.org/multipage/interaction.html#input-modalities:-the-enterkeyhint-attribute
 compat_features:
