--- a/features/accesskey.yml
+++ b/features/accesskey.yml
@@ -1,4 +1,4 @@
-name: Accesskey
+name: accesskey
 description: The `accessKey` global HTML attribute gives a hint for generating a keyboard shortcut for the current element. The attribute value must consist of a single printable character.
 spec: https://html.spec.whatwg.org/multipage/interaction.html#the-accesskey-attribute
 status:
