--- a/features/autocapitalize.yml
+++ b/features/autocapitalize.yml
@@ -1,4 +1,4 @@
-name: Autocapitalize
+name: autocapitalize
 description: The `autocapitalize` global HTML attribute sets the virtual keyboard capitalization behavior for user input on an element, such as the first letter of sentences or all words.
 spec: https://html.spec.whatwg.org/multipage/interaction.html#autocapitalization
 compat_features:
