--- a/features/lang-attr.yml
+++ b/features/lang-attr.yml
@@ -1,4 +1,4 @@
-name: Lang
+name: lang
 description: The `lang` global HTML attribute defines the language of an element. It's used by assistive technology to correctly read the content, translation tools to select the origin language, and other applications.
 spec: https://html.spec.whatwg.org/multipage/dom.html#attr-lang
 compat_features:
