--- a/features/spellcheck.yml
+++ b/features/spellcheck.yml
@@ -1,4 +1,4 @@
-name: Spellcheck
+name: spellcheck
 description: The `spellcheck` global HTML attribute sets whether the browser may check an element for spelling errors.
 spec: https://html.spec.whatwg.org/multipage/interaction.html#the-accesskey-attribute
 compat_features:
