--- a/features/translate.yml
+++ b/features/translate.yml
@@ -1,3 +1,3 @@
-name: translate attribute
+name: translate
 description: The `translate` HTML attribute marks whether an element's text should be translated.
 spec: https://html.spec.whatwg.org/multipage/dom.html#attr-translate
