Add features and assign more keys for workers (and add a workers group) (#2665)
* Add dedicated worker feature

* Add key to messageerror feature

* Add shared worker feature

* Add group for workers-related features

* Assign worklet keys

---------

Co-authored-by: Patrick Brosset <patrick.brosset@microsoft.com>

--- a/features/audio-worklet.yml
+++ b/features/audio-worklet.yml
@@ -1,7 +1,9 @@
 name: AudioWorklet
 description: The `AudioWorklet` API runs module code in a separate thread, specifically for non-blocking, low latency audio processing.
 spec: https://webaudio.github.io/web-audio-api/#AudioWorklet
-group: web-audio
+group:
+  - web-audio
+  - workers
 compat_features:
   - api.AudioWorklet
   - api.AudioWorkletGlobalScope
@@ -18,3 +20,6 @@ compat_features:
   - api.AudioWorkletProcessor.AudioWorkletProcessor
   - api.AudioWorkletProcessor.port
   - api.BaseAudioContext.audioWorklet
+  - api.Worklet
+  - api.Worklet.addModule
+  - api.WorkletGlobalScope
