--- a/features/fixed-positioning.yml
+++ b/features/fixed-positioning.yml
@@ -2,5 +2,6 @@ name: Fixed positioning
 description: "The `position: fixed` CSS declaration removes an element from the normal flow and positions it relative to the viewport or page."
 spec: https://drafts.csswg.org/css-position-3/#abspos-insets
 group: positioning
+caniuse: css-fixed
 compat_features:
   - css.properties.position.fixed
