--- a/packages/baseline-browser-mapping/package.json
+++ b/packages/baseline-browser-mapping/package.json
@@ -1,6 +1,6 @@
 {
   "name": "baseline-browser-mapping",
-  "version": "2.0.0-beta.2",
+  "version": "2.0.0",
   "description": "A library for obtaining browser versions with their maximum supported Baseline feature set and Widely Available status.",
   "exports": {
     ".": "./dist/index.js"
@@ -24,5 +24,9 @@
   "devDependencies": {
     "@types/node": "^22.13.5",
     "typescript": "^5.7.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tonypconway/web-features/tree/main/packages/baseline-browser-mapping"
   }
 }
