--- a/packages/web-features/package.json
+++ b/packages/web-features/package.json
@@ -5,7 +5,8 @@
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/web-platform-dx/web-features.git"
+    "url": "git+https://github.com/web-platform-dx/web-features.git",
+    "directory": "packages/web-features"
   },
   "type": "module",
   "main": "index.js",
