--- a/features/column-pseudo.yml
+++ b/features/column-pseudo.yml
@@ -1,4 +1,4 @@
-name: ::column pseudo-element
+name: ::column
 description: The `::column` CSS pseudo-element represents the individual columns in a multi-column container and can be styled with scroll-snap properties and have associated `::scroll-marker` pseudo-elements.
 spec: https://drafts.csswg.org/css-multicol-2/#column-pseudo
 group: multi-column
