--- a/features/column-pseudo.yml
+++ b/features/column-pseudo.yml
@@ -1,5 +1,5 @@
 name: ::column
-description: The `::column` CSS pseudo-element represents the individual columns in a multi-column container and can be styled with scroll-snap properties and have associated `::scroll-marker` pseudo-elements.
+description: The `::column` CSS pseudo-element represents the individual columns of a multi-column layout container. Columns can only be styled with scroll snap CSS properties and can also have a `::scroll-marker` pseudo-element, which scrolls to the column when activated.
 spec: https://drafts.csswg.org/css-multicol-2/#column-pseudo
 group:
   - multi-column
