--- a/features/scroll-markers.yml
+++ b/features/scroll-markers.yml
@@ -2,3 +2,10 @@ name: Scroll markers
 description: The `::scroll-marker` CSS pseudo-element is a focusable control within its ancestor scroll container's `::scroll-marker-group` that scrolls to its originating element.
 spec: https://drafts.csswg.org/css-overflow-5/#scroll-markers
 group: scrolling
+compat_features:
+  - css.selectors.scroll-marker
+  - css.selectors.scroll-marker-group
+  - css.properties.scroll-marker-group
+  - css.properties.scroll-marker-group.after
+  - css.properties.scroll-marker-group.before
+  - css.properties.scroll-marker-group.none
