--- a/features/scroll-markers.yml.dist
+++ b/features/scroll-markers.yml.dist
@@ -4,3 +4,10 @@
 status:
   baseline: false
   support: {}
+compat_features:
+  - css.properties.scroll-marker-group
+  - css.properties.scroll-marker-group.after
+  - css.properties.scroll-marker-group.before
+  - css.properties.scroll-marker-group.none
+  - css.selectors.scroll-marker
+  - css.selectors.scroll-marker-group
