Undist appearance to move the new base value to custom-select, and re-gen all dist

--- a/features/aria-attribute-reflection.yml.dist
+++ b/features/aria-attribute-reflection.yml.dist
@@ -229,6 +229,8 @@ compat_features:
 
   # baseline: false
   # support:
+  #   firefox: "136"
+  #   firefox_android: "136"
   #   safari: "16.4"
   #   safari_ios: "16.4"
   - api.Element.ariaActiveDescendantElement
