--- a/features/customizable-select.yml
+++ b/features/customizable-select.yml
@@ -4,3 +4,9 @@ spec: https://open-ui.org/components/customizableselect/
 group:
   - forms
   - html-elements
+comat_features:
+  - css.properties.appearance.base
+  - css.selectors.checkmark
+  - css.selectors.picker-icon
+  - css.selectors.picker
+  - html.elements.selectedcontent
