--- a/features/appearance.yml
+++ b/features/appearance.yml
@@ -2,3 +2,18 @@ name: appearance
 description: "The `appearance` CSS property controls the appearance of form controls. Using `appearance: none` disables any default native appearance and allows the elements to be styled with CSS."
 spec: https://drafts.csswg.org/css-ui-4/#appearance-switching
 group: css
+compat_features:
+  - css.properties.appearance
+  - css.properties.appearance.auto
+  - css.properties.appearance.button
+  - css.properties.appearance.checkbox
+  - css.properties.appearance.listbox
+  - css.properties.appearance.menulist
+  - css.properties.appearance.menulist-button
+  - css.properties.appearance.meter
+  - css.properties.appearance.none
+  - css.properties.appearance.progress-bar
+  - css.properties.appearance.radio
+  - css.properties.appearance.searchfield
+  - css.properties.appearance.textarea
+  - css.properties.appearance.textfield
