--- a/features/customizable-select.yml
+++ b/features/customizable-select.yml
@@ -4,7 +4,7 @@ spec: https://open-ui.org/components/customizableselect/
 group:
   - forms
   - html-elements
-comat_features:
+compat_features:
   - css.properties.appearance.base
   - css.selectors.checkmark
   - css.selectors.picker-icon
